Fix: Font size in Custom Media Covers add-on should scale more consistently now

--- a/Theme/assets/add-ons/custom-media-covers-nightly.css
+++ b/Theme/assets/add-ons/custom-media-covers-nightly.css
@@ -31,7 +31,7 @@
 
 .card-withuserdata[data-isfolder="true"]:not([data-type="PhotoAlbum"], [data-type="Series"], [data-type="Folder"], [data-type="Season"], [data-type="Playlist"]) .cardImageContainer.cardContent::before {
     position: absolute;
-    font-size: 3.5vh;
+    font-size: clamp(1em, max(2.5vh, 2vw), 2.5em);
     margin-bottom: .175em;
     font-weight: 800;
     color: white;
